--- a/firstwebpage.html
+++ b/firstwebpage.html
@@ -110,7 +110,7 @@
                     </ul>
                 </div>
                 <div class="content">
-                        <h1>GLOBAL PANDEMIC:CORONA</h1>
+                        <h1>COVID</h1>
                         <p>Be INFORMED,PREPARED,SMART,SAFE and GET READY to fight COVID-19</p>
                     <div class="container">
                         <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#a1">KNOW MORE</button>
